Tugas minggu ke-4

--- a/Minggu4/formatributes.html
+++ b/Minggu4/formatributes.html
@@ -12,7 +12,7 @@
   <input type="submit" value="Submit">
 </form>
 
-<p>Nama Belakang</p>
+<p>Nama Belakang</p>
 
 <label for="lname">Last name:</label>
 <input type="text" id="lname" name="lname" form="form1">
