--- a/Minggu6/index.html
+++ b/Minggu6/index.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initialscale=1.0">
-	<title>Contoh Project Pemrograman Website</title>
+	<title>Home Page</title>
 </head>
 <body>
 	<nav>
 		<a href="index.html">Home</a> |
 		<a href="downloadcv.pdf">Download CV</a> |
 		<a href="kontak.html">Contact</a> |
-		<a href="tentang.html">About me</a>
+		<a href="tentang.html">About me</a> |
+		<a href="scmedia.html">Social Media</a>
 	</nav>
 	<hr />
 	<header style="text-align: center;">
@@ -58,4 +59,4 @@
 		<p>Copyright &copy; 2022 Wildan amiruddin.</p>
 	</footer>
 </body>
-</html
+</html>
