--- a/Minggu6/scmedia.html
+++ b/Minggu6/scmedia.html
@@ -3,7 +3,7 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initialscale=1.0">
-	<title>Contact</title>
+	<title>Social Media</title>
 </head>
 <body>
 	<nav>
@@ -16,16 +16,9 @@
 	<hr />
 	<div>
 		<h1>Kontak Saya </h1>
-		<form>
-			<label for="email">Email</label><br />
-			<input type="email" name="email" placeholder="alamat email"/>
-			<br />
-			<label for="message">Pesan</label><br />
-			<textarea name="message" placeholder="Tulis pesan anda..." rows="4" cols="80"></textarea>
-			<br />
-			<br />
-			<input type="submit" value="Kirim" />
-		</form>
+			<article>
+				<a href="https://www.instagram.com/willdnrdn/"></a>
+			</article>
 	</div>
 	<hr>
 		<footer style="text-align: center;">
