--- a/Minggu6/tentang.html
+++ b/Minggu6/tentang.html
@@ -3,14 +3,15 @@
 <head>
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initialscale=1.0">
-	<title>Personal Website</title>
+	<title>About Me</title>
 </head>
 <body>
 	<nav>
 		<a href="index.html">Home</a> |
 		<a href="downloadcv.pdf">Download CV</a> |
 		<a href="kontak.html">Contact</a> |
-		<a href="tentang.html">About me</a>
+		<a href="tentang.html">About me</a> |
+		<a href="scmedia.html">Social Media</a>
 	</nav>
 	<hr />
 	<article>
@@ -25,7 +26,7 @@
 			Saya ingin menguasai bahasa HTML, CSS, dan Javascript. Simak video lengkap tentang saya.
 		</p>
 		<p>
-			<video controls>
+			<video width="300vh" height="180vh" controls>
 				<source src="video.mp4" type="video/webm"/>
 			</video>
 		</p>
