Tugas minggu ke-6

--- a/Minggu6/scmedia.html
+++ b/Minggu6/scmedia.html
@@ -17,7 +17,8 @@
 	<div>
 		<h1>Kontak Saya </h1>
 			<article>
-				<a href="https://www.instagram.com/willdnrdn/"></a>
+				
+				<a href="https://www.instagram.com/willdnrdn/">INSTAGRAM</a>
 			</article>
 	</div>
 	<hr>
