Tugas minggu ke-10

--- a/Minggu10/aritmatika.html
+++ b/Minggu10/aritmatika.html
@@ -12,23 +12,23 @@
       var b = 4;
       var c = 0;
 
-      //pengurangan
+      // pengurangan
       c = a - b;
       document.write(`${a} - ${b} = ${c}<br/>`);
 
-      //perkalian
+      // Perkalian
       c = a * b;
       document.write(`${a} * ${b} = ${c}<br/>`);
 
-      //pemangkatan
+      // pemangkatan
       c = a ** b;
       document.write(`${a} ** ${b} = ${c}<br/>`);
 
-      //pembagian
+      // Pembagian
       c = a / b;
       document.write(`${a} / ${b} = ${c}<br/>`);
 
-      //modulo
+      // Modulo
       c = a % b;
       document.write(`${a} % ${b} = ${c}<br/>`);
     </script>
