--- a/Minggu10/external javascript/index.html
+++ b/Minggu10/external javascript/index.html
@@ -7,14 +7,9 @@
     <title>Belajar HTML</title>
   </head>
   <body>
-    <script>
-      var yakin = confirm("Apakah kamu yakin akan mengunjungi website UDINUS?");
+    <p>Tutorial Javascript Pemula</p>
 
-      if (yakin) {
-        window.location = "http://dinus.ac.id ";
-      } else {
-        document.write("belum, tetap di sini saja :)");
-      }
-    </script>
+    <!-- Menyisipkan kode js eksternal -->
+    <script src="kode-program.js"></script>
   </body>
 </html>
