--- a/Minggu10/helo-javascript.html
+++ b/Minggu10/helo-javascript.html
@@ -8,13 +8,8 @@
   </head>
   <body>
     <script>
-      var yakin = confirm("Apakah kamu yakin akan mengunjungi website UDINUS?");
-
-      if (yakin) {
-        window.location = "http://dinus.ac.id ";
-      } else {
-        document.write("belum, tetap di sini saja :)");
-      }
+      console.log("Saya belajar Javascript");
+      document.write("Hello World!");
     </script>
   </body>
 </html>
